@@ -20,8 +20,8 @@ repository.type = git
 
 [Prereqs]
 perl          = 5.008001
-Test2         = 0.000027
-Test2::Suite  = 0.000020
+Test2         = 0.000041
+Test2::Suite  = 0.000027
 Carp          = 0
 Exporter      = 0
 Scalar::Util  = 0
