@@ -1,5 +1,8 @@
 {{$NEXT}}
 
+    - Support custom formatters
+    - Add subtest info to events
+
 0.000013  2016-03-20 13:47:39-07:00 America/Los_Angeles
 
     - Add subtest name to pending warning
